@@ -6,7 +6,8 @@ Change history for Coverage.py
 Version 3.5
 -----------
 
-
+- A little bit of Jython support: `coverage run` can now measure Jython
+  execution by adapting when $py.class files are traced.
 
 
 Version 3.4 --- 19 September 2010
